# encryptman

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
src/: main.rs
