[package]
name = "encryptman"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast and secure file encryption tool written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/encryptman"
homepage = "https://github.com/yourusername/encryptman"
documentation = "https://docs.rs/encryptman"
keywords = ["encryption", "security", "cryptography", "privacy", "vault"]
categories = ["cryptography", "command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "encryptman"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
